Fix TooltipMenu on small screens

--- a/src/amo/components/UserReview/styles.scss
+++ b/src/amo/components/UserReview/styles.scss
@@ -11,10 +11,6 @@
     margin-top: 6px;
   }
 
-  .TooltipMenu {
-    width: fit-content;
-  }
-
   .Card-contents {
     background: transparent;
     padding: 0;
@@ -22,6 +18,12 @@
 
   .ShowMoreCard.UserReview-emptyBody {
     margin: 0;
+  }
+
+  @include respond-to(medium) {
+    .TooltipMenu {
+      width: fit-content;
+    }
   }
 }
 
